reduce button group

--- a/plans_fiber_horizontal.html
+++ b/plans_fiber_horizontal.html
@@ -196,7 +196,7 @@
                                 </div>
                                 <h4>Available internet plans</h4>
                             </div>
-                            <div class="button-group">
+                            <div class="button-group" style="max-width:611px;">
                                 <div class="button active">Up to 1 Gig speeds</div>
                                 <div class="button">Up to 5 Gig speeds</div>
                             </div>
