--- a/plans_horizontal.html
+++ b/plans_horizontal.html
@@ -174,7 +174,7 @@
                         <div id="plans-header" class="copy-block">
                             <h3>Plan options</h3>
                             <p>Pick the best plan for each line.</p>
-                            <div class="button-group">
+                            <div class="button-group" style="max-width:611px;">
                                 <div class="button active">Unlimited Your Way</div>
                                 <div class="button">Other Plans</div>
                             </div>
