added eyebrow to fiber cards

--- a/plans_fiber_horizontal.html
+++ b/plans_fiber_horizontal.html
@@ -221,8 +221,8 @@
                                                 <span>Best Deal</span>
                                             </div>
                                             <div class="head">
-                                                <!-- <div class="eyebrow xs">AT&T FIBER - INTERNET 5000</div> -->
-                                                <h3>AT&T FIBER - Internet 5000</h3>
+                                                <div class="eyebrow xs">Up to 5 Gig speeds</div>
+                                                <h3>AT&T FIBER - INTERNET 5000</h3>
                                                 <div class="price detailed">
                                                     <div class="price lg">
                                                         <div class="strikethrough">$185.00/mo</div>
@@ -509,8 +509,8 @@
                                                 <span>Best Deal</span>
                                             </div>
                                             <div class="head">
-                                                <!-- <div class="eyebrow xs">AT&T FIBER - INTERNET 2000</div> -->
-                                                <h3>AT&T FIBER - Internet 2000</h3>
+                                                <div class="eyebrow xs">Up to 2 Gig speeds</div>
+                                                <h3>AT&T FIBER - INTERNET 2000</h3>
                                                 <div class="price detailed">
                                                     <div class="price lg">
                                                         <div class="strikethrough">$115.00/mo</div>
@@ -797,8 +797,8 @@
                                                 <span>Customer Preferred</span>
                                             </div>
                                             <div class="head">
-                                                <!-- <div class="eyebrow xs">AT&T FIBER - INTERNET 1000</div> -->
-                                                <h3>AT&T FIBER - Internet 1000</h3>
+                                                <div class="eyebrow xs">Up to 1 Gig speeds</div>
+                                                <h3>AT&T FIBER - INTERNET 1000</h3>
                                                 <div class="price detailed">
                                                     <div class="price lg">
                                                         <div class="strikethrough">$85.00/mo</div>
@@ -1085,8 +1085,8 @@
                                                 <span>Best Deal</span>
                                             </div>
                                             <div class="head">
-                                                <!-- <div class="eyebrow xs">AT&T FIBER - INTERNET 500</div> -->
-                                                <h3>AT&T FIBER - Internet 500</h3>
+                                                <div class="eyebrow xs">500Mbps speeds</div>
+                                                <h3>AT&T FIBER - INTERNET 500</h3>
                                                 <div class="price detailed">
                                                     <div class="price lg">
                                                         <div class="strikethrough">$70.00/mo</div>
@@ -1373,8 +1373,8 @@
                                                 <span>Best Deal</span>
                                             </div>
                                             <div class="head">
-                                                <!-- <div class="eyebrow xs">AT&T FIBER - INTERNET 300</div> -->
-                                                <h3>AT&T FIBER - Internet 300</h3>
+                                                <div class="eyebrow xs">300 Mbps speeds</div>
+                                                <h3>AT&T FIBER - INTERNET 300</h3>
                                                 <div class="price detailed">
                                                     <div class="price lg">
                                                         <div class="strikethrough">$60.00/mo</div>
