minor spacing adjustments

--- a/plans_horizontal.html
+++ b/plans_horizontal.html
@@ -20,7 +20,7 @@
     <script src="js/plan-card-hor.js"></script>
 
 </head>
-<body>
+<body class="gray">
 
 
     <header>
@@ -62,15 +62,62 @@
             </div>
         </nav>
 
-        <div id="progress-indicator">
+        <div id="promobanner" class="signature">
+            <div class="limited">
+                <div class="accordion">
+                    <div class="control">
+                        <div class="label">
+                            <div class="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M12.5 0A1.5 1.5 0 0114 1.5v14.3l-5.5-2.66L3 15.8V1.5A1.5 1.5 0 014.5 0zM9 3H8v1a1.5 1.5 0 000 3h1a.5.5 0 010 1H7v1h1v1h1V9a1.51 1.51 0 001.46-1.5A1.5 1.5 0 009 6H8a.5.5 0 110-1h2V4H9V3z"/></svg> 
+                            </div>
+                            <div class="text">
+                                <h4>AT&T Signature Program</h4>
+                                <div>Afflitated with AT&T EMO Manager</div>
+                            </div>
+                        </div>
+                        <div class="carat">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M8 11.05L2.65 5.7l.7-.7L8 9.63 12.65 5l.7.71z"/></svg>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <div class="wrapper">
+                            <div class="container">
+                                <div class="frame">
+                                    <div>
+                                        <h3>Save with these deals and perks</h3>
+                                    </div>
+                                    <div>
+                                        <ul class="tight">
+                                            <li>Save $10/mo. per phone line on AT&T Unlimited Premium<sup>SM</sup> plan</li>
+                                            <li>Waived activation fees with select activations<sup>c</sup></li>
+                                            <li>20% off eligible wireless accessories<sup>a</sup></li>
+                                            <li>18% off the monthly service charge of qualified wireless plans, including AT&T 4GB Plan<sup>b</sup></li>
+                                        </ul>
+                                        <div class="cta primary">
+                                            <span>See the legal stuff</span>
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M6.64 13.35l-.71-.7L10.58 8 5.93 3.35l.71-.7L12 8z"/></svg>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="progress-indicator" class="gray">
             <div id="progress-indicator-block">
                 <div id="progress-indicator-container">
                     <div class="container">
                         <div class="header">
                             <div class="eyebrow sm" style="display:none;">Phones & Devices</div>
                             <div class="title">
-                                <h4>Configure your device</h4>
-                                <!--<div class="step-count">Step [N] of [N]</div>-->
+                                <h4>Choose your plan</h4>
+                                <div class="step-count">
+                                    <span>Step 3 of 5</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M11.13 6.94l.7.71L8.48 11 5.13 7.65l.7-.71 2.65 2.64zM16 8.5A7.5 7.5 0 118.5 1 7.5 7.5 0 0116 8.5zm-1 0A6.5 6.5 0 108.5 15 6.51 6.51 0 0015 8.5z"/></svg>
+                                </div>
                             </div>
                         </div>
                         <div class="indicator dt">
