top details bar

--- a/plans_horizontal.html
+++ b/plans_horizontal.html
@@ -148,24 +148,29 @@
                     <div class="container limited">
                         <div>
                             <div class="device">
-                                <div class="device-image">
-                                    <img src="images/devices/AlpineGreen-1.png" />
-                                </div>
-                                <div class="device-details">
-                                    <h4>Apple iPhone 13 Pro Max</h4>
-                                    <p>Alpine Green - 128 GB - AT&T Installment Plan</p>
-                                </div>
-                            </div>
-                            <div class="plan-details">
-        
-                            </div>
-                            <div class="offers">
-                                <div class="offer card">
-                                    <div class="icon">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M23 1H9a3 3 0 00-3 3v26.7l10-5.56 10 5.56V4a3 3 0 00-3-3zm1 26.3l-8-4.44-8 4.44V4a1 1 0 011-1h14a1 1 0 011 1zM20 15a3 3 0 01-3 3v2h-2v-2h-2v-2h4a1 1 0 000-2h-2a3 3 0 010-6V6h2v2h2v2h-4a1 1 0 000 2h2a3 3 0 013 3z"/></svg>
+                                <div class="phone">
+                                    <div class="device-image">
+                                        <img src="images/devices/AlpineGreen-1.png" />
                                     </div>
-                                    <div class="readout">
-                                        <p>You're getting iPhone 13 Pro Max 128GB for $20/mo.</p>
+                                    <div class="device-details">
+                                        <h4>Apple iPhone 13 Pro Max</h4>
+                                    </div>
+                                </div>
+                                <div class="options">
+                                    <h6>128 GB</h6>
+                                    <h6>Midnight Blue</h6>
+                                    <h6>Installment</h6>
+                                </div>
+                            </div>
+                            <div class="offer">
+                                <div class="offer-container">
+                                    <div class="icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M17.5 30.67a3 3 0 01-2.12-.88l-12.5-12.5A3 3 0 012 15.17V2h13.17a3 3 0 012.12.88l12.5 12.5a3 3 0 010 4.24L19.62 29.79a3 3 0 01-2.12.88zM4 4v11.17a1 1 0 00.29.71l12.5 12.5a1 1 0 001.42 0l10.17-10.17a1 1 0 000-1.42l-12.5-12.5a1 1 0 00-.71-.29zm18.71 13.71l-1.42-1.42-5 5 1.42 1.42zM9 12a3 3 0 113-3 3 3 0 01-3 3zm0-4a1 1 0 101 1 1 1 0 00-1-1z"/></svg>
+                                        <div class="alert blue">5</div>
+                                    </div>
+                                    <div class="cta primary">
+                                        <span>See my offers</span>
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M6.64 13.35l-.71-.7L10.58 8 5.93 3.35l.71-.7L12 8z"/></svg>
                                     </div>
                                 </div>
                             </div>
