--- a/plans_horizontal.html
+++ b/plans_horizontal.html
@@ -166,7 +166,7 @@
                                 <div class="offer-container">
                                     <div class="icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M17.5 30.67a3 3 0 01-2.12-.88l-12.5-12.5A3 3 0 012 15.17V2h13.17a3 3 0 012.12.88l12.5 12.5a3 3 0 010 4.24L19.62 29.79a3 3 0 01-2.12.88zM4 4v11.17a1 1 0 00.29.71l12.5 12.5a1 1 0 001.42 0l10.17-10.17a1 1 0 000-1.42l-12.5-12.5a1 1 0 00-.71-.29zm18.71 13.71l-1.42-1.42-5 5 1.42 1.42zM9 12a3 3 0 113-3 3 3 0 01-3 3zm0-4a1 1 0 101 1 1 1 0 00-1-1z"/></svg>
-                                        <div class="alert blue">5</div>
+                                        <div class="alert blue">1</div>
                                     </div>
                                     <div class="cta primary">
                                         <span>See my offers</span>
@@ -266,6 +266,73 @@
                                 <div class="button">Other Plans</div>
                             </div>
                             <p>All AT&T unlimited plans include unlimited talk, text, and data in the U.S., Canada, and Mexico and 5G access at no extra charge.</p>
+                            <p class="legal">Price is only for devices purchased at full price, bring your own, or on installment plan, and after AutoPay & paperless billing discount (starts within 2 bill cycles). Taxes & fees extra.</p>
+                            <div class="link-expand">
+                                <div class="cta primary">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M2.71 2L6 5.29l-.7.7L2 2.71V5H1V1h4v1zM11 1v1h2.29L10 5.29l.7.7L14 2.71V5h1V1zm3 12.28L10.71 10l-.7.71 3.3 3.3H11v1h4V11h-1zM5.29 10L2 13.28V11H1v4h4v-1H2.69L6 10.7z"/></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M11.71 11L15 14.29l-.71.71L11 11.71V14h-1v-4h4v1zM5 4.29L1.71 1 1 1.71 4.29 5H2v1h4V2H5zM14 5h-2.29L15 1.71 14.29 1 11 4.29V2h-1v4h4zM2 11h2.29L1 14.29l.71.71L5 11.7V14h1v-4H2z"/></svg>
+                                    <span>Expand view</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="plans-header-advanced" class="copy-block">
+                            <div class="icon-header">
+                                <div class="shaped-container md white circle">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96"><path class="svg-base" d="M22 86h-2V67h2zm18-38h-2v38h2zm18-19h-2v57h2z"/><path class="svg-accent" d="M76 86h-2V10h2z"/></svg>
+                                </div>
+                                <div class="text">
+                                    <h2>Mix & Match plans for everyone</h2>
+                                    <p>Only pay for what you need on each line</p>
+                                </div>
+                            </div>
+                            <div class="button-group" style="max-width:611px;">
+                                <div class="button active">Unlimited Your Way</div>
+                                <div class="button">Other Plans</div>
+                            </div>
+                            <div>
+                                <div class="accordion framed">
+                                    <div class="control">
+                                        <div class="label">Every unlimited plan includes</div>
+                                        <div class="carat">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M8 11.05L2.65 5.7l.7-.7L8 9.63 12.65 5l.7.71z"/></svg>
+                                        </div>
+                                    </div>
+                                    <div class="content">
+                                        <div class="wrapper">
+                                            <div id="plan-rtbs" class="rtbs four">
+                                                <div class="rtb">
+                                                    <div class="icon shaped-container md white circle">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" data-name="Icon (Outlined)" viewBox="0 0 32 32"><path class="svg-base" d="M29 11.14a6.81 6.81 0 00-9.63 0L16 14.54l-3.4-3.4a6.81 6.81 0 100 9.62l3.4-3.4 3.4 3.4a6.81 6.81 0 109.6-9.62zm-17.8 8.21a4.81 4.81 0 01-6.8-6.8 4.8 4.8 0 016.8 0L14.6 16zm16.42 0a4.82 4.82 0 01-6.8 0L17.42 16l3.4-3.4a4.81 4.81 0 016.8 6.8z"/></svg>
+                                                    </div>
+                                                    <h5>Unlimited talk, text, and data</h5>
+                                                    <p class="legal">In and between the U.S., Canada, and Mexico. Roaming may be at 2G speeds.</p>
+                                                </div>
+                                                <div class="rtb">
+                                                    <div class="icon shaped-container md white circle">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" data-name="Icon (Outlined)" viewBox="0 0 64 64"><path class="svg-base" d="M45 2H19.15A5.13 5.13 0 0014 7.16V56.9a5.13 5.13 0 005.15 5.1H45a5 5 0 005-5V7a5 5 0 00-5-5zm3 55a3 3 0 01-3 3H19.15A3.14 3.14 0 0116 56.9V7.16A3.13 3.13 0 0119.15 4H45a3 3 0 013 3zM37 8v2H27V8z"/><path class="svg-base" d="M29 31.24a3.64 3.64 0 011.25 3 4.13 4.13 0 01-.59 2.22A3.84 3.84 0 0128 37.88a5.5 5.5 0 01-2.43.51 7.38 7.38 0 01-4-1.13l.62-1.58a6.44 6.44 0 003.28.92 2.93 2.93 0 002-.63 2.29 2.29 0 00.7-1.81 2 2 0 00-.82-1.74 4.09 4.09 0 00-2.4-.58h-2.76l.45-6.84h6.89v1.83h-5.19l-.21 3.37h1.35A5.33 5.33 0 0129 31.24zm8.12-.49v1.92h3V36a6.31 6.31 0 01-2.27.34A4.24 4.24 0 0134.63 35a4.92 4.92 0 01-1.21-3.52A5.37 5.37 0 0134 29a4.17 4.17 0 011.62-1.71A4.75 4.75 0 0138 26.7a7.4 7.4 0 011.73.17 7.29 7.29 0 011.64.61l.63-1.76a8.09 8.09 0 00-2-.81 8.68 8.68 0 00-2.23-.27 6.67 6.67 0 00-3.37.85 6 6 0 00-2.38 2.42 7.27 7.27 0 00-.88 3.6 7.69 7.69 0 00.86 3.57 5.79 5.79 0 002.27 2.43 6.77 6.77 0 003.51.88 8.73 8.73 0 004.61-1.17v-6.47z"/></svg>
+                                                    </div>
+                                                    <h5>Access AT&T 5G. Fast. Reliable. Secure.</h5>
+                                                    <p class="legal">Req's compatible plan & device. Coverage not available everywhere. Learn more at <a href="">att.com/5Gforyou</a></p>
+                                                </div>
+                                                <div class="rtb">
+                                                    <div class="icon shaped-container md white circle">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path class="svg-base" d="M14.1 22.107a28.985 28.985 0 0 0-3.115 2.723C7.354 28.498 4.343 33.32 2.531 38A30.775 30.775 0 0 1 2 32.331C2 15.58 15.44 2 32.022 2c1.135 0 2.254.069 3.357.193.581.401 1.172.877 1.769 1.453 3.762 3.634 7.03 8.788 8.74 13.786.266.778.492 1.566.683 2.364-4.703-2.635-9.725-3.74-14.46-3.74a29.831 29.831 0 0 0-14.717 3.892 30.013 30.013 0 0 0-3.294 2.16Zm34.837-5.417c.576 1.706 1 3.502 1.258 5.352.177 1.272.27 2.572.285 3.885.048 4.439-.855 9.05-2.927 13.417-2.292 4.835-6.008 9.366-11.267 12.551l.164.056.189.063c3 .925 6.389 1.415 9.804 1.415 2.059 0 4.037-.179 5.873-.527a13.12 13.12 0 0 0 2.142-.595c4.687-5.297 7.543-12.327 7.543-20.043 0-13.459-8.691-24.832-20.63-28.55 3.181 3.601 5.975 8.258 7.566 12.976Zm-3.159 39.452c-3.678 0-7.49-.5-10.95-1.533-1.001-.297-1.994-.661-2.976-1.075a29.603 29.603 0 0 1-3.447-1.718A29.998 29.998 0 0 1 17.143 40.21c-2.221-4.095-3.627-8.939-3.594-14.21-.281.257-.56.515-.83.785-3.71 3.678-6.873 8.812-8.464 13.737-.27.836-.44 1.614-.54 2.351C8.051 54.058 18.98 62 31.786 62A30.106 30.106 0 0 0 50 55.905c-1.37.15-2.783.237-4.222.237Z" /></svg>
+                                                    </div>
+                                                    <h5>AT&T ActiveArmor<sup>SM</sup> mobile security</h5>
+                                                    <p class="legal">Req's compatible device/service. Data charges may apply to app download/usage. Other terms and req's apply. Visit <a href="">att.com/activearmorapp</a> to learn more.</p>
+                                                </div>
+                                                <div class="rtb no-legal">
+                                                    <div class="icon shaped-container md white circle">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path class="svg-base" d="M32 2a30 30 0 1030 30A30 30 0 0032 2zm0 58A28 28 0 015.82 22.09a4.85 4.85 0 002.12 1.52s6.7 2.53 5.91 5.55c-.68 2.62-.95 2.79-.75 5.07.36 4 5.23 4.38 6.85 6.67s1.56 7.49 1.9 10.3 1.92 2.34 3.23 2c1.6-.47 1.43-3.46 1.43-6.35S31 44.38 31 40.93s2.3-2 2.3-7.07-6.22-5.57-8.68-7.95-4.26-2.3-6.05-1.28a2 2 0 01-3.15-1.36c0-1-.85-3.49-2.38-2.55s-3.4-.43-2.13-3.32 4.95-1.4 4.95-1.4-.43 2.9 1.45 2.64.5-5.23 6.55-9.13c4.55-2.94 11.52-5.22 15.85-4.37A27.55 27.55 0 0146 7.75c.18 1.42.18 2.87-.62 2.81-1.53-.13-2 .43-2.16 2.09s-.71 2.23 1 2.43 2 .19 2.68-1c.45-.73 2.89-1.66 4.62-2.25A29.31 29.31 0 0154 14.68h-2.19c-2.84-.21-5.27 2.84-7.06 4.5s-1.85 3.57-1.85 6.25 1.66 4 3.22 4.92 4.38-.32 5.4-.32 1.53 1.72 1.15 4 1.47 4.28 2.11 5.37.38 4.75 1.21 7.11A28 28 0 0132 60z"/></svg>
+                                                    </div>
+                                                    <h5>Unlimited texting from the U.S. to 200+ countries</h5>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <p class="legal">Price is only for devices purchased at full price, bring your own, or on installment plan, and after AutoPay & paperless billing discount (starts within 2 bill cycles). Taxes & fees extra.</p>
                             <div class="link-expand">
                                 <div class="cta primary">
@@ -1186,6 +1253,14 @@
                 </div>
                 <div class="container limited">
                     <div>
+                        <div class="header">
+                            <div class="shaped-container md blue">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M7.08 8L6 4H1v2h3.49l4.15 15.76a3 3 0 002.9 2.24h12a3 3 0 002.89-2.18L30.33 8zm17.37 13.27a1 1 0 01-1 .73H11.54a1 1 0 01-1-.75L7.61 10h20.06zM12 27.5a1.5 1.5 0 11-1.5-1.5 1.5 1.5 0 011.5 1.5zm14 0a1.5 1.5 0 11-1.5-1.5 1.5 1.5 0 011.5 1.5z"/></svg>
+                            </div>
+                            <div>
+                                <h4>Here's what you've added so far</h4>
+                            </div>
+                        </div>
                         <div class="device">
                             <div class="device-image">
                                 <img src="images/devices/AlpineGreen-1.png" />
@@ -1195,18 +1270,37 @@
                                 <p>Alpine Green - 128 GB - AT&T Installment Plan</p>
                             </div>
                         </div>
-                        <div class="plan-details">
-
-                        </div>
                         <div class="offers">
-                            <div class="offer card">
+                            <div class="accordion framed small">
+                                <div class="control">
+                                    <div class="label">
+                                        <div class="offer-container">
+                                            <div class="icon">
+                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M17.5 30.67a3 3 0 01-2.12-.88l-12.5-12.5A3 3 0 012 15.17V2h13.17a3 3 0 012.12.88l12.5 12.5a3 3 0 010 4.24L19.62 29.79a3 3 0 01-2.12.88zM4 4v11.17a1 1 0 00.29.71l12.5 12.5a1 1 0 001.42 0l10.17-10.17a1 1 0 000-1.42l-12.5-12.5a1 1 0 00-.71-.29zm18.71 13.71l-1.42-1.42-5 5 1.42 1.42zM9 12a3 3 0 113-3 3 3 0 01-3 3zm0-4a1 1 0 101 1 1 1 0 00-1-1z"/></svg>
+                                                <div class="alert blue">1</div>
+                                            </div>
+                                        </div>
+                                        <div class="txt">Offers included</div>
+                                    </div>
+                                    <div class="carat">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M8 11.05L2.65 5.7l.7-.7L8 9.63 12.65 5l.7.71z"/></svg>
+                                    </div>
+                                </div>
+                                <div class="content">
+                                    <div class="wrapper">
+                                        <h5>You're getting iPhone 13 Pro Max for $XX/mo</h5>
+                                        <p class="legal mar-sm-t">with elig. installment plan & elig. unlimited plan (speed restr's apply). Credits start within 3 bills. Without eligible unlimited plan, device is $27.78/mo.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- <div class="offer card">
                                 <div class="icon">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M23 1H9a3 3 0 00-3 3v26.7l10-5.56 10 5.56V4a3 3 0 00-3-3zm1 26.3l-8-4.44-8 4.44V4a1 1 0 011-1h14a1 1 0 011 1zM20 15a3 3 0 01-3 3v2h-2v-2h-2v-2h4a1 1 0 000-2h-2a3 3 0 010-6V6h2v2h2v2h-4a1 1 0 000 2h2a3 3 0 013 3z"/></svg>
                                 </div>
                                 <div class="readout">
                                     <p>You're getting iPhone 13 Pro Max 128GB for $20/mo.</p>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
