update pricing on plan select

--- a/plans_horizontal.html
+++ b/plans_horizontal.html
@@ -1291,6 +1291,9 @@
                                 <h4>Apple iPhone 13 Pro Max</h4>
                                 <p>Alpine Green - 128 GB - AT&T Installment Plan</p>
                             </div>
+                            <div>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M29.12 4.29L27.7 2.87a3 3 0 00-4.24 0L5.81 20.5a4.91 4.91 0 00-1.27 2.15L2.6 29.37l6.73-1.94a5.13 5.13 0 002.15-1.27L29.12 8.54a3 3 0 000-4.25zM10.06 24.74a3 3 0 01-1.29.77l-3.25.93.94-3.24a3 3 0 01.76-1.29L19.59 9.56l2.84 2.83zM27.71 7.12L23.85 11 21 8.15l3.86-3.86a1 1 0 01.72-.29 1 1 0 01.7.29l1.43 1.42a1 1 0 01.29.71 1 1 0 01-.29.7z"/></svg>
+                            </div>
                         </div>
                         <div class="offers">
                             <div class="accordion framed small">
