--- a/pdp_v1.html
+++ b/pdp_v1.html
@@ -22,8 +22,6 @@
     <script src="js/reviews.js"></script>
     <script src="js/content-nav.js"></script>
     <script src="js/device-carousel.js"></script>
-    
-    <!--script src="js/device-carousel.js"></script-->
 
 </head>
 <body>
@@ -495,23 +493,40 @@
                     </div>
                 </nav>
 
-                <div class="border-bottom">
-                    <div id="breadcrumbs">
-                        <div class="header">
-                            <div class="eyebrow sm" style="display:none;">Phones & Devices</div>
-                            <div class="title">
-                                <h4>Configure your device</h4>
-                                <div class="step-count">Step [N] of [N]</div>
+                <div id="progress-indicator" class="gray">
+                    <div id="progress-indicator-block">
+                        <div id="progress-indicator-container">
+                            <div class="container">
+                                <div class="header">
+                                    <div class="eyebrow sm" style="display:none;">Phones & Devices</div>
+                                    <div class="title">
+                                        <h4>Choose your plan</h4>
+                                        <div class="step-count">
+                                            <span>Step 3 of 5</span>
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path class="svg-base" d="M11.13 6.94l.7.71L8.48 11 5.13 7.65l.7-.71 2.65 2.64zM16 8.5A7.5 7.5 0 118.5 1 7.5 7.5 0 0116 8.5zm-1 0A6.5 6.5 0 108.5 15 6.51 6.51 0 0015 8.5z"/></svg>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="indicator dt">
+                                    <div class="icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M22 31H10a3 3 0 01-3-3V4a3 3 0 013-3h12a3 3 0 013 3v24a3 3 0 01-3 3zM10 3a1 1 0 00-1 1v24a1 1 0 001 1h12a1 1 0 001-1V4a1 1 0 00-1-1zm9 2h-6v2h6z"/></svg>
+                                    </div>
+                                    <div class="tab-container">
+                                        <div class="completed">1. Pick your device</div>
+                                        <div class="completed">2. Customize your phone</div>
+                                        <div class="active">3. Choose your plan</div>
+                                        <div>4. Get add-ons</div>
+                                        <div>5. Review your cart</div>
+                                    </div>
+                                    <div class="checkout">Checkout</div>
+                                </div>
+                                <div class="indicator mb">
+                                    <div class="progress-bar"><div></div></div>
+                                </div>
                             </div>
                         </div>
-                        <div class="tab-container">
-                            <div class="completed">Select device</div>
-                            <div class="active">Configure device</div>
-                            <div>Choose plan</div>
-                            <div>Select add-ons</div>
-                            <div>View cart</div>
-                        </div>
                     </div>
+                    
                 </div>
 
             </header>
