updated detail bar pull tab

--- a/plans_horizontal.html
+++ b/plans_horizontal.html
@@ -1302,7 +1302,7 @@
         <div id="sticky-footer">
             <div id="details-footer" class="details-bar expanded">
                 <div class="expand-icon pull-tab label bottom">
-                    <!-- <div><h6>Cart Summary</h6></div> -->
+                    <div><h6>Cart Summary</h6></div>
                     <div>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M12.27 26.71l-1.41-1.42L20.15 16l-9.29-9.29 1.41-1.42L23 16z"/></svg>
                     </div>
@@ -1352,14 +1352,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="offer card">
-                                <div class="icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M23 1H9a3 3 0 00-3 3v26.7l10-5.56 10 5.56V4a3 3 0 00-3-3zm1 26.3l-8-4.44-8 4.44V4a1 1 0 011-1h14a1 1 0 011 1zM20 15a3 3 0 01-3 3v2h-2v-2h-2v-2h4a1 1 0 000-2h-2a3 3 0 010-6V6h2v2h2v2h-4a1 1 0 000 2h2a3 3 0 013 3z"/></svg>
-                                </div>
-                                <div class="readout">
-                                    <p>You're getting iPhone 13 Pro Max 128GB for $20/mo.</p>
-                                </div>
-                            </div> -->
                         </div>
                     </div>
                 </div>
