--- a/plans-wls.html
+++ b/plans-wls.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-flow="v1" data-page="plans">
+<html lang="en" data-flow="wls" data-page="plans">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -151,7 +151,7 @@
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M19.01 9H13V7h6.01v2zM12 21.99h2v-3h-2v3zm3-6v6h2v-6h-2zm3 6h2v-9h-2v9zM24 6v20c0 1.65-1.35 3-3 3H11c-1.65 0-3-1.35-3-3V6c0-1.65 1.35-3 3-3h10c1.65 0 3 1.35 3 3zm-2 0c0-.55-.45-1-1-1H11c-.55 0-1 .45-1 1v20c0 .55.45 1 1 1h10c.55 0 1-.45 1-1V6zm8.54 2.27c-.43-.68-1.1-1.14-1.88-1.32l-3.44-.76-.43 1.95 3.44.76a.993.993 0 01.76 1.19L25.84 24.3c-.09.4-.45.69-.85.69v2c1.34 0 2.52-.95 2.81-2.26l3.15-14.21c.17-.78.03-1.59-.4-2.26zm-26.77.64l3.44-.76-.43-1.95-3.44.76c-.78.17-1.45.64-1.88 1.32s-.57 1.48-.4 2.26l3.15 14.21c.29 1.3 1.47 2.25 2.8 2.26v-2c-.4 0-.76-.29-.85-.69L3.01 10.11a.985.985 0 01.13-.75c.14-.23.37-.38.63-.44z"/></svg>
                                         </div>
                                         <div class="details">
-                                            <h5>Pick a wireless plan</h5>
+                                            <h5 class="scroll-to-plans">Pick a wireless plan</h5>
                                             <p class="xxs"></p>
                                         </div>
                                     </div>
@@ -221,7 +221,7 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M19.01 9H13V7h6.01v2zM12 21.99h2v-3h-2v3zm3-6v6h2v-6h-2zm3 6h2v-9h-2v9zM24 6v20c0 1.65-1.35 3-3 3H11c-1.65 0-3-1.35-3-3V6c0-1.65 1.35-3 3-3h10c1.65 0 3 1.35 3 3zm-2 0c0-.55-.45-1-1-1H11c-.55 0-1 .45-1 1v20c0 .55.45 1 1 1h10c.55 0 1-.45 1-1V6zm8.54 2.27c-.43-.68-1.1-1.14-1.88-1.32l-3.44-.76-.43 1.95 3.44.76a.993.993 0 01.76 1.19L25.84 24.3c-.09.4-.45.69-.85.69v2c1.34 0 2.52-.95 2.81-2.26l3.15-14.21c.17-.78.03-1.59-.4-2.26zm-26.77.64l3.44-.76-.43-1.95-3.44.76c-.78.17-1.45.64-1.88 1.32s-.57 1.48-.4 2.26l3.15 14.21c.29 1.3 1.47 2.25 2.8 2.26v-2c-.4 0-.76-.29-.85-.69L3.01 10.11a.985.985 0 01.13-.75c.14-.23.37-.38.63-.44z"/></svg>
                                     </div>
                                     <div class="details">
-                                        <h5>Pick a wireless plan</h5>
+                                        <h5 class="scroll-to-plans">Pick a wireless plan</h5>
                                         <p class="xxs"></p>
                                     </div>
                                 </div>
@@ -298,7 +298,7 @@
                     </div>
                 </div>
 
-                <!-- TRIPLE PLAY -->
+                <!-- TRIPLE PLAY 
                 <div id="offer-id-devices" class="accordion">
                     <div class="control">
                         <div class="label">99¢/mo. Tablet and/or Watch</div>
@@ -413,7 +413,7 @@
 
                         </div>
                     </div>
-                </div>
+                </div>-->
 
             </section>
 
@@ -492,6 +492,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <!--
                             <div id="offer-id-devices" class="offer manage">
                                 <div class="shaped-container sm circle">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M24.8 5.12L23.72 1H8.28L7.2 5.12A3 3 0 005 8v16a3 3 0 002.2 2.88L8.28 31h15.44l1.08-4.12A3 3 0 0027 24V8a3 3 0 00-2.2-2.88zM22.18 3l.52 2H9.3l.52-2zM9.82 29l-.52-2h13.4l-.52 2zM25 24a1 1 0 01-1 1H8a1 1 0 01-1-1V8a1 1 0 011-1h16a1 1 0 011 1zm-8-8.41l3.71 3.7-1.42 1.42-4.29-4.3V10h2z"/></svg>
@@ -506,6 +507,7 @@
                                     </div>
                                 </div>
                             </div>
+                            -->
 
                         </div>
 
@@ -514,7 +516,7 @@
                     </div>
                     <div class="settings manage flex middle">
                         <div class="shaped-container sm circle">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M17.5 31h-3a2.5 2.5 0 01-2.5-2.5V28a2.85 2.85 0 00-1.42-2.46 3.09 3.09 0 00-3.11 0l-.28.16a2.51 2.51 0 01-3.42-.91l-1.5-2.6a2.5 2.5 0 01.91-3.41l.32-.19a3 3 0 000-5.24l-.31-.18a2.51 2.51 0 01-.91-3.42l1.5-2.6a2.51 2.51 0 013.42-.91l.28.16a3.09 3.09 0 003.11 0A2.85 2.85 0 0012 4v-.5A2.5 2.5 0 0114.5 1h3A2.5 2.5 0 0120 3.5v.39a3 3 0 004.47 2.58l.34-.2a2.51 2.51 0 013.42.91l1.5 2.6a2.5 2.5 0 01-.91 3.41l-.32.19A3 3 0 0027 16a3 3 0 001.51 2.62l.31.18a2.51 2.51 0 01.91 3.42l-1.5 2.6a2.51 2.51 0 01-3.42.91l-.28-.16a3.09 3.09 0 00-3.11 0A2.85 2.85 0 0020 28v.47A2.5 2.5 0 0117.5 31zM9 23.15a5.07 5.07 0 012.56.69A4.86 4.86 0 0114 28v.47a.5.5 0 00.5.5h3a.5.5 0 00.5-.5V28a4.86 4.86 0 012.42-4.19 5.09 5.09 0 015.12 0l.27.16a.51.51 0 00.69-.19l1.5-2.56a.49.49 0 00-.18-.68l-.32-.19a5 5 0 010-8.7l.32-.19a.49.49 0 00.18-.68l-1.5-2.6a.51.51 0 00-.69-.18l-.34.2A5 5 0 0118 3.89V3.5a.5.5 0 00-.5-.5h-3a.5.5 0 00-.5.5V4a4.86 4.86 0 01-2.42 4.19 5.09 5.09 0 01-5.12 0L6.19 8a.51.51 0 00-.69.19L4 10.78a.49.49 0 00.18.68l.32.19a5 5 0 010 8.7l-.32.19a.49.49 0 00-.18.68l1.5 2.6a.52.52 0 00.69.18l.27-.16A5.1 5.1 0 019 23.15zM16 22a6 6 0 116-6 6 6 0 01-6 6zm0-10a4 4 0 104 4 4 4 0 00-4-4z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path class="svg-base" d="M29.16 12.54A6.39 6.39 0 0128 11a7.08 7.08 0 01-.29-2 5.28 5.28 0 00-1.11-3.66A5.28 5.28 0 0023 4.28 7.08 7.08 0 0121 4a6.39 6.39 0 01-1.52-1.15A5.38 5.38 0 0016 1a5.38 5.38 0 00-3.46 1.84A6.39 6.39 0 0111 4a7.08 7.08 0 01-2 .29 5.28 5.28 0 00-3.61 1.1 5.28 5.28 0 00-1.11 3.66A7.08 7.08 0 014 11a6.39 6.39 0 01-1.15 1.52A5.38 5.38 0 001 16a5.38 5.38 0 001.84 3.46A6.39 6.39 0 014 21a7.08 7.08 0 01.29 2 5.28 5.28 0 001.11 3.66 5.28 5.28 0 003.66 1.11A7.08 7.08 0 0111 28a6.39 6.39 0 011.52 1.15A5.38 5.38 0 0016 31a5.38 5.38 0 003.46-1.84A6.39 6.39 0 0121 28a7.08 7.08 0 012-.29 5.28 5.28 0 003.66-1.11 5.28 5.28 0 001.06-3.6 7.08 7.08 0 01.28-2 6.39 6.39 0 011.15-1.52A5.38 5.38 0 0031 16a5.38 5.38 0 00-1.84-3.46zm-1.48 5.58a7.42 7.42 0 00-1.51 2.09 8 8 0 00-.44 2.63 4 4 0 01-.54 2.35 4 4 0 01-2.35.54 8 8 0 00-2.63.44 7.42 7.42 0 00-2.09 1.51C17.37 28.36 16.66 29 16 29s-1.37-.64-2.12-1.32a7.42 7.42 0 00-2.09-1.51 8 8 0 00-2.63-.44 4 4 0 01-2.35-.54 4 4 0 01-.54-2.35 8 8 0 00-.44-2.63 7.42 7.42 0 00-1.51-2.09C3.64 17.37 3 16.66 3 16s.64-1.37 1.32-2.12a7.42 7.42 0 001.51-2.09 8 8 0 00.44-2.63 4 4 0 01.54-2.35 4 4 0 012.35-.54 8 8 0 002.63-.44 7.42 7.42 0 002.09-1.51C14.63 3.64 15.34 3 16 3s1.37.64 2.12 1.32a7.42 7.42 0 002.09 1.51 8 8 0 002.63.44 4 4 0 012.35.54 4 4 0 01.54 2.35 8 8 0 00.44 2.63 7.42 7.42 0 001.51 2.09c.68.75 1.32 1.46 1.32 2.12s-.64 1.37-1.32 2.12zm-6.68.37A3.59 3.59 0 0117.34 22H17v2h-2v-2h-3v-2h5.34a1.51 1.51 0 100-3h-2.68A3.58 3.58 0 0111 13.51 3.52 3.52 0 0114.52 10H15V8h2v2h3v2h-5.48A1.51 1.51 0 0013 13.49 1.59 1.59 0 0014.66 15h2.68A3.58 3.58 0 0121 18.49z"/></svg>
                         </div>
                     </div>
                     <div class="carat">
@@ -539,7 +541,7 @@
                     </a>
                 </div>
             </div>
-            <div class="image" style="background-image: url(images/lifestyle/phone-4.jpg);"></div>
+            <div class="image" style="background-image: url(images/lifestyle/phone-2.jpg);background-position: 80% 100%;"></div>
 
         </section>
 
@@ -648,7 +650,7 @@
                                         <svg style="fill:var(--primary-blue)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96"><path class="sag-base" fill-rule="evenodd" d="M25.33 35.47a36.73 36.73 0 0 0-3.95 3.45 50.25 50.25 0 0 0-10.7 16.68 38.98 38.98 0 0 1-.68-7.18C10 27.2 27.02 10 48.03 10c1.44 0 2.85.09 4.25.25.74.5 1.48 1.1 2.24 1.84a46.23 46.23 0 0 1 11.07 17.46c.34.98.62 1.98.87 3a37.79 37.79 0 0 0-41.13 2.93Zm44.12-6.86a37.38 37.38 0 0 1 1.96 11.7 38.63 38.63 0 0 1-3.71 17 37.03 37.03 0 0 1-14.27 15.9c.07.01.14.04.2.06l.25.08a42.69 42.69 0 0 0 19.85 1.13c1-.2 1.9-.45 2.72-.76A38.19 38.19 0 0 0 86 48.34c0-17.05-11-31.46-26.13-36.17a49.66 49.66 0 0 1 9.58 16.44Zm-4 49.97c-4.66 0-9.48-.63-13.87-1.94a37.47 37.47 0 0 1-8.13-3.54 38 38 0 0 1-14.27-14.7 37.23 37.23 0 0 1-4.55-18c-.36.33-.71.65-1.05 1a45.33 45.33 0 0 0-10.72 17.4 17.19 17.19 0 0 0-.69 2.97A38.1 38.1 0 0 0 47.73 86c8.67 0 16.67-2.88 23.07-7.72-1.73.2-3.53.3-5.35.3Z" clip-rule="evenodd"/></svg>
                                     </div>
                                     <h4>AT&T ActiveArmor℠ mobile security</h4>
-                                    <p class="legal">Requires compatible device/service. Other terms and restr’s apply. Visit <a href="">att.com/activearmorapp</a> for details.</p>
+                                    <p class="legal">Requires compatible device/service. Other terms and restr's apply. Visit <a href="">att.com/activearmorapp</a> for details.</p>
                                 </div>
 
                                 <!-- <div class="rtb flex col sm middle">
